--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Masque Works
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://masqueworks.com
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+color_scheme: dark
+
+footer_content: "Copyright &copy; 2025 Masque Works, LLC."
