--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: Masque Works
 theme: just-the-docs
+logo: "/images/MasqueLogo_1080p.png"
+favicon_ico: "/images/masqueicon.ico"
 
 url: https://masqueworks.com
 
