--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Masque Works
 theme: just-the-docs
-logo: "/images/MasqueLogo_1080p.png"
+logo: "/images/MasqueIcon.png"
 favicon_ico: "/images/masqueicon.ico"
 
 url: https://masqueworks.com
