--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,6 @@ nav_external_links:
     hide_icon: true # set to true to hide the external link icon - defaults to false
     opens_in_new_tab: false # set to true to open this link in a new tab - defaults to false
 
-color_scheme: dark
+color_scheme: masque
 
 footer_content: "Copyright &copy; 2025 Masque Works, LLC."
